--- a/front/src/App.module.css
+++ b/front/src/App.module.css
@@ -22,6 +22,11 @@
   left: 30px;  
 }
 
+.cube,
+.heroDesk {
+  display: none;
+}
+
 h1 {
   margin-top: -80px;
   text-align: center;
@@ -60,7 +65,6 @@ h1 {
   text-align: left;
   display: inline-block;
   font-size: 13px;
-  font-weight: 400;
   line-height: 16px;
   letter-spacing: 0px;
   color: hsla(237, 12%, 33%, 1);
@@ -110,8 +114,6 @@ h1 {
   margin-bottom: 20px;
 }
 
-
-
 .rect {
   width: 279px;
   height: 1px;
@@ -120,7 +122,78 @@ h1 {
 
 }
 
-
-@media (prefers-reduced-motion: no-preference) {
+@media screen and (min-width: 1440px) {
   
+  .App {
+    width: 920px;
+    height: 509px;
+    padding: 60px 60px 60px 0px;
+    background-image: url("../public/images/bg-pattern-desktop.svg");
+    background-size: cover;
+    background-position: left -525px top -280px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    overflow: hidden;  
+  }
+  
+  .hero {
+    display: none;
+  }
+
+  .heroDesk {
+    display: inline-block;
+    position: relative;
+    top: 0px;
+    left: -80px;
+    width: 472px;
+    height: 359px;
+    grid-column: 1;
+    grid-row: 1;  
+  }
+
+  .cube {
+    display: inline-block;
+    position: absolute;
+    top: 49%;
+    left: 169px;
+    grid-column: 1;
+    grid-row: 1;  
+    z-index: 1;
+  }
+  
+  h1 {
+    margin-top: 0px;
+    text-align: left;
+    grid-column: 2;
+    grid-row: 1;   
+  }
+  
+  .faqdiv {
+    width: 350px;
+    margin-top: 70px;
+    grid-column: 2;
+    grid-row: 1;
+  }
+  
+  .questionDiv {
+    margin-top: 20px;
+  }
+  
+  .question {
+    width: 254px;
+    font-size: 14px;
+    line-height: 17px;
+  }
+  
+  .boldquestion {
+    width: 254px;
+    font-size: 13px;
+    font-weight: 700;
+    line-height: 17px;
+  }
+
+  .rect {
+    width: 350px;
+  }
+
 }
